--- a/timer/style.css
+++ b/timer/style.css
@@ -60,7 +60,7 @@ html {
 
 img {
 	height: auto;
-	width: 150px;
+	width: 125px;
 }
 
 input[type=checkbox] {
